RESOLVED FIXED 237084
[GStreamer] De-initialize GStreamer before terminating WebProcess
https://bugs.webkit.org/show_bug.cgi?id=237084
Summary [GStreamer] De-initialize GStreamer before terminating WebProcess
Philippe Normand
Reported 2022-02-23 06:51:34 PST
Allowing the leak tracer to report/log leaks. From https://bugs.webkit.org/show_bug.cgi?id=217655#c42
Attachments
Patch (3.09 KB, patch)
2022-02-23 06:57 PST, Philippe Normand
no flags
Patch (3.60 KB, patch)
2022-02-23 07:13 PST, Philippe Normand
no flags
Patch (3.96 KB, patch)
2022-02-23 07:45 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2022-02-23 06:57:40 PST
Carlos Garcia Campos
Comment 2 2022-02-23 07:00:50 PST
Comment on attachment 452976 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=452976&action=review > Source/WebKit/WebProcess/glib/WebProcessGLib.cpp:88 > +#if USE(GSTREAMER) > + gst_deinit(); > +#endif I think the right place for this is WebProcessMainGtk.cpp and WebProcessMainWPE.cpp. You need to override platformFinalize(). Closing the pages is done here because m_pageMap is private.
Philippe Normand
Comment 3 2022-02-23 07:13:28 PST
Carlos Garcia Campos
Comment 4 2022-02-23 07:20:45 PST
Comment on attachment 452977 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=452977&action=review > Source/WebKit/WebProcess/gtk/WebProcessMainGtk.cpp:75 > +#if USE(GSTREAMER) > + gst_deinit(); > +#endif Don't we need to include a gst header for this? > Source/WebKit/WebProcess/wpe/WebProcessMainWPE.cpp:107 > +#if USE(GSTREAMER) > + gst_deinit(); > +#endif Ditto.
Philippe Normand
Comment 5 2022-02-23 07:26:28 PST
Somehow they were pulled in, the magics of unified builds I suppose. Anyway yes, I'll add explicit includes, it won't hurt.
Philippe Normand
Comment 6 2022-02-23 07:45:08 PST
Michael Catanzaro
Comment 7 2022-02-23 07:53:40 PST
(In reply to Philippe Normand from comment #5) > Somehow they were pulled in, the magics of unified builds I suppose. Anyway > yes, I'll add explicit includes, it won't hurt. You'll save Adrian from fixing it after you ;)
EWS
Comment 8 2022-02-23 08:34:50 PST
Committed r290375 (247691@main): <https://commits.webkit.org/247691@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452979 [details].
Radar WebKit Bug Importer
Comment 9 2022-02-23 08:35:29 PST
Adrian Perez
Comment 10 2022-02-23 08:37:43 PST
(In reply to Michael Catanzaro from comment #7) > (In reply to Philippe Normand from comment #5) > > Somehow they were pulled in, the magics of unified builds I suppose. Anyway > > yes, I'll add explicit includes, it won't hurt. > > You'll save Adrian from fixing it after you ;) Indeed! Thanks for adding the explicit includes 😁️
Note You need to log in before you can comment on or make changes to this bug.