[GStreamer] De-initialize GStreamer before terminating WebProcess https://bugs.webkit.org/show_bug.cgi?id=237084

Patch by Philippe Normand <pnormand@igalia.com> on 2022-02-23
Reviewed by Carlos Garcia Campos.

Source/WebKit:

Allowing the leak tracer to report/log leaks. There is an issue though, if the UIProcess
exits too early, the leak tracer reporting will be interrupted potentially too early. The
workaround is to have 2 tabs open in the GTK MiniBrowser, closing the one where media
handling and leak tracing was done and keeping the second tab open.

* WebProcess/glib/WebProcessGLib.cpp:
(WebKit::WebProcess::stopRunLoop):

Tools:

* flatpak/flatpakutils.py:
(WebkitFlatpak.setup_gstbuild): Do not add extra quotes to GST_TRACERS, this is not supposed
to store paths.


Canonical link: https://commits.webkit.org/247691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290375 268f45cc-cd09-0410-ab3c-d52691b4dbfc